31/5/02 (marques)
  - Added new laser mode (read from file)
  - Started rewitting the output system (first attempt at elf)
  - funny thing with strings (hard to explain... fortran...)
13/5/02 (marques)
  - Rename hamiltonian* -> h*
  - continuation of td simulation now uses .nbo file
05/5/02 (marques)
  - Added a couple of .hgh files
  - Created Makefiles for HGH share directory
  - Added split-operator propagator (do *not* use with velocity gauge)
03/5/02 (acastro)
  - Goedecker pseudopotentials added. Some comments:
    * LCAO calculations don't work properly, because the Goedecker
      pseudoeigenfunctions are badly calculated. It can be fixed, but
      it will take time.
    * The files ps3D.F90, tm.F90 and hgh.F90 are still a mess, but they
      are on their way of looking nice. Need some work.
    * The pseudopotential files for Goedecker may be obtained from their
      paper, just copying 10 or 12 numbers, in the same format they use in their
      paper. Those files should
      go into the share directory, as Miguel did for the TM2 ps. Question: do
      I just have to add a "HGH" directory to share/PP, and it is done?
    * The "Species" input format changed (one more field to specify "tm"
      or "hgh"). I will change the manual.
28/4/02 (marques)
  - Added GPL header to (almost) all files
  - Added share directory to put pseudopotentials
23/4/02 (marques)
  - Memory leak fixed in Hpsi (hamiltonian_inc.F90)
  - Bug fix in restart in mpi mode (run.F90)
  - Cleaned up non-linear core corrections (faster, smaller)
20/4/02 (marques)
  - Changed AIX compiler options in fortran.m4
  - Bug fix related to the reading of OutputPotential...
  - Added utility to calculate harmonic spectrum from accelaration file
    (currently only works for local potentials)
16/4/02 (marques)
  - MPI bug fixes
  - build bug fixes + configure.ac now uses GSL native configuration 